fix and improve teavm platform implementation